# prime-bip85

./: .gitignore  Cargo.toml  NOTICE  README.md  THIRD-PARTY.md  app-config.toml  permission_templates.toml
bip85-core/: Cargo.toml
bip85-core/examples/: derive.rs
bip85-core/src/: bip32.rs  bip39.rs  bip85.rs  lib.rs  seedqr.rs
bip85-core/tests/: spec_vectors.rs
i18n/: en.json  es.json
src/: main.rs
theme/: theme.json
ui/: app.slint  callbacks.slint
